# alpaqa-lasso

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt  generate-data.py  pyproject.toml
.github/workflows/: python.yml
python/: complex-lasso.py  lasso.py  matrix-completion.py
python/alpaqa/problems/lasso/: __init__.py
python/alpaqa/problems/matrix_completion/: __init__.py
scripts/ci/: pre-build-macos.py  settings_user.yml
scripts/dev/: alpaqa.toml  cuda11.toml  cuda12.toml
src/: complex-multi-lasso.cpp  eval_f_cuda.cpp  eval_f_grad_f_cuda.cpp  lasso.cpp  problem-cuda.cpp  problem.cpp  problem.hpp
src/complex-openmp/: complex-convert.hpp  complex-omp-problem.hpp  hess-L-prod.cpp
src/cuda/: cuda-problem.cpp  cuda-problem.hpp  cuda-util.hpp  f.cpp  grad-f.cpp  prox-grad-step.cu
src/lasso/: lasso.cpp  problem.cpp  problem.hpp
src/lasso/complex-openmp/: complex-omp-problem.cpp  f-grad-f.cpp  f.cpp  grad-f.cpp  prox-grad-step.cpp
src/lasso/cuda/: cuda-problem.hpp  f-grad-f-ata.cpp  f-grad-f.cpp  hess-L-prod.cpp  prox-grad-step.cpp
src/lasso/openmp/: f.cpp  hess-L.cpp  omp-problem.cpp
src/matrix-completion/: matrix-completion.cpp  problem.hpp
src/openmp/: f-grad-f.cpp  f.cpp  grad-f.cpp  hess-L-prod.cpp  omp-problem.cpp  omp-problem.hpp  prox-grad-step.cpp  util.hpp
